--- a/index.html
+++ b/index.html
@@ -16,10 +16,33 @@
                 <li><a href="#">Portifólio</a></li>
                 <li><a href="#">Contatos</a></li>
             </ul>
-        </nav>
-        <h1 class="site-title">Pedro Henrique</h1>
-        <h2 class="site-subtitle">Jr.Frontend Developer</h2>
+        </nav>]
+        <div>
+            <h1 class="site-title">Pedro Henrique</h1>
+            <h2 class="site-subtitle">Jr.Frontend Developer</h2>
+        </div>
     </header>
+    <section>
+        <h2>Portfólio</h2>
+        <figure>
+            <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+            <figcaption>eCommerce</figcaption>
+        </figure>
+        <figure>
+            <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+            <figcaption>Mobile</figcaption>
+        </figure>
+        <figure>
+            <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+            <figcaption>Web design</figcaption>
+        </figure>
+        <figure>
+            <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg"
+                alt="Projetos pessoais">
+            <figcaption>Projetos pessoais</figcaption>
+        </figure>
+    </section>
+
 </body>
 
 </html>
