Quarta versão do site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Press+Start+2P&family=Source+Code+Pro&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/008c206115.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,16 +17,18 @@
         <nav class="menu">
             <ul>
                 <li><a href="#">Sobre</a></li>
-                <li><a href="#">Cursos & Hobby</a></li>
-                <li><a href="#">Contatos</a></li>
+                <li><a href="#cursos">Cursos & Hobby</a></li>
+                <li><a href="#contato">Contatos</a></li>
             </ul>
-        </nav>]
-        <div>
+        </nav>
+        <div class="titulo
+        ">
             <h1 class="site-title">Pedro Henrique</h1>
             <h2 class="site-subtitle">Student Frontend Developer</h2>
+
         </div>
     </header>
-    <section class="Portfólio">
+    <section class="Portfólio" id="cursos">
         <h2>Cursos & Hobby</h2>
 
         <div class="grid">
@@ -47,6 +50,23 @@
                 <img class="img-portfolio" src="./img/hobby-creditos-yago-bellico.jpg" alt="Hobby">
                 <figcaption>Hobby</figcaption>
             </figure>
+        </div>
+    </section>
+    <section class="contato" id="contato">
+        <h2>Contato</h2>
+        <div class="grid icons">
+            <a target="_blank" href="https://github.com/Pedrohenrlg">
+                <i class="fab fa-github"></i>
+            </a>
+            <a target="_blank" href="https://twitter.com/pedrohenrlg">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/pedro-de-lima-2343bb146/">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="mailto:pedrohenrique200952@gmail.com">
+                <i class="far fa-envelope"></i>
+            </a>
         </div>
     </section>
 
