--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -9,14 +9,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Press+Start+2P&family=Source+Code+Pro&display=swap"
         rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/008c206115.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <nav class="menu">
-            <ul>
-                <li><a href="#">Sobre</a></li>
+            <ul class="container">
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#cursos">Cursos & Hobby</a></li>
                 <li><a href="#contato">Contatos</a></li>
             </ul>
@@ -28,31 +29,92 @@
 
         </div>
     </header>
-    <section class="Portfólio" id="cursos">
+    <section class="sobre container" id="sobre">
+        <h2>Sobre</h2>
+
+        <Figure class="avatar">
+            <img src="https://pbs.twimg.com/profile_images/1259886606112231426/eCkNySI3_400x400.jpg"
+                alt="Pedro Henrique">
+        </Figure>
+
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque magni maiores vero praesentium facilis.
+            Molestiae doloribus nesciunt numquam ab consequuntur asperiores dignissimos quia vero exercitationem! Ipsam
+            enim unde vel fugiat!
+        </p>
+        <p>
+            Voluptas, animi aperiam dolore provident, vel et nostrum porro natus ipsam ipsa, quas assumenda? Obcaecati
+            laborum aperiam rem aut autem esse deleniti. Ut recusandae soluta veniam quas magni, eveniet eius.
+        </p>
+        <p>
+            Rerum corrupti ullam incidunt asperiores? Illo maxime nihil adipisci tempora! Repudiandae assumenda ut non,
+            nihil placeat, sapiente quo inventore alias excepturi voluptas totam deleniti commodi laborum, minima magni
+            tempora delectus.
+        </p>
+        <p>
+            Este site foi construido durante a <a href="https://www.alura.com.br/imersao-css">Imersão CSS da Alura</a>
+        </p>
+    </section>
+    <section class="Portfólio container" id="cursos">
         <h2>Cursos & Hobby</h2>
 
         <div class="grid">
-            <figure>
-                <img class="img-portfolio" src="./img/administrativo-creditos-tvtec.jpg" alt="Auxiliar Administrativo">
-                <figcaption>Auxiliar Administrativo</figcaption>
-            </figure>
-            <figure>
-                <img class="img-portfolio" src="./img/mecanico-creditos-certificado-curso-online.jpg"
-                    alt="Mecânico Automotivo">
-                <figcaption>Mecânico Automotivo</figcaption>
-            </figure>
-            <figure>
-                <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg"
-                    alt="Projetos pessoais">
-                <figcaption>Projetos pessoais</figcaption>
-            </figure>
-            <figure>
-                <img class="img-portfolio" src="./img/hobby-creditos-yago-bellico.jpg" alt="Hobby">
-                <figcaption>Hobby</figcaption>
-            </figure>
+
+
+            <div class="flip-card">
+                <div class="card">
+                    <figure class="card-front">
+                        <img class="img-portfolio" src="./img/administrativo-creditos-tvtec.jpg"
+                            alt="Auxiliar Administrativo">
+
+                    </figure>
+
+                    <div class="card-back">
+                        Auxiliar Administrativo
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="flip-card">
+                <div class="card">
+                    <figure class="card-front">
+                        <img class="img-portfolio" src="./img/mecanico-creditos-certificado-curso-online.jpg"
+                            alt="Mecânico Automotivo">
+                    </figure>
+
+                    <div class="card-back">
+                        Mecânico Automotivo
+                    </div>
+                </div>
+            </div>
+
+            <div class="flip-card">
+                <div class="card">
+                    <figure class="card-front">
+                        <img class="img-portfolio" src="./img/sucesso-na-vida1451988482.jpg" alt="Projetos pessoais">
+                    </figure>
+
+                    <div class="card-back">
+                        Projetos pessoais
+                    </div>
+                </div>
+            </div>
+
+            <div class="flip-card">
+                <div class="card">
+                    <figure class="card-front">
+                        <img class="img-portfolio" src="./img/hobby-creditos-yago-bellico.jpg" alt="Hobby">
+                    </figure>
+
+                    <div class="card-back">
+                        Slackline
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <section class="contato" id="contato">
+    <section class="contato container" id="contato">
         <h2>Contato</h2>
         <div class="grid icons">
             <a target="_blank" href="https://github.com/Pedrohenrlg">
@@ -69,7 +131,6 @@
             </a>
         </div>
     </section>
-
 </body>
 
 </html>
